# DoDevEditor

./: .gitignore  CMakeLists.txt  DoDevEditor_logo.xpm  README.md  gen_test.sh  readme.txt
cmake/: TreeSitter.cmake  mingw32.cmake
editor/: CMakeLists.txt  editor
editor/includes/: default_callbacks.h  default_dialog.h  drag_and_drop.h  folder_manager.h  id_handler.h  main_frame.h  plugin_loader.h  tab.h  text_editor.h  utils.h
editor/src/: default_callbacks.cpp  folder_manager.cpp  main.cpp  main_frame.cpp  main_menu.cpp  plugin_loader.cpp  text_editor.cpp
editor/test/: CMakeLists.txt  folder_manager_test.cpp  test_main.cpp
includes/: BinaryEditor.h  CSVEditor.h  DLTViewer.h  DataServerEditor.h  Dialogs.h  EditorTab.h  ExtensionManager.h  FileExplorerTab.h  GitPanel.h  ImageEditor.h  MenubarOptions.h  ParseHeaders.h  Settings.h  TabContainer.h  TextEditor.h  argc_handler.h  callbacks.h  clang_format.h  constant.h  custom_ui_class.h  do_devwindow.h  exec_dialog.h  explorer_panel.h  frame.h  git_panel.h  git_panel_id.h  id_handler.h  main_frame.h  main_menu.h  menubar.h  save_folder_file_dialog.h  structures.h  symbol_panel.h  tabs.h  text_editor.h  theme.h  tokenizer.h  tree_sitter_api.h  utils.h
plugins-sdk/: CMakeLists.txt  sdk.cpp  sdk.h
src/: CSVEditor.cpp  DLTViewer.cpp  DataServerEditor.cpp  Dialogs.cpp  FileExplorerTab.cpp  Frame.cpp  GitPanel.cpp  ImageEditor.cpp  TabContainer.cpp  TextEditor.cpp  callbacks.cpp  clang_format.cpp  do_devwindow.cpp  exec_dialog.cpp  explorer_panel.cpp  git_panel.cpp  main.cpp  main_frame.cpp  main_menu.cpp  symbol_table.cpp  tabs.cpp  text_editor.cpp  utils.cpp
src/Backend/: ConfigureEditor.java  MyFileTransferHandler.java  OpenAndSaveTextFile.java  SaveAndClose.java
src/FrontEnd/: DoDevEditor.java  Main.java
test/: CMakeLists.txt
test/external_tools/pydlt/: main.py  test.dlt  test2.dlt
